--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -36,3 +36,6 @@
 "Mic Access rights explanation" = "To be able to use Peppermint you should give access to your microphone. You can change the access rights from the settings.";
 "Settings URL is not supported" = "Your iOS version does not support redirecting to Settings Page. Please follow the Home Screen -> Settings -> Peppermint path to change permissions";
 "Settings" = "Settings";
+"Recording is cut" = "Your voice recording is cut. How would you like to proceed?";
+"Restart record" = "Restart recording";
+"Continue from previous" = "Continue from previous";
