- Implemented AWS integation - Implemented basics for new login storyboard - Implemented M4a to aac conversion

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -48,3 +48,4 @@
 "Record More Than Limit Format" = "Please record at least %d seconds before\nsending";
 "Send" = "Send";
 "Re record" = "Re record";
+"Swipe in any direction to cancel" = "Swipe in any direction\nto cancel";
