--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -24,7 +24,8 @@
 "Could not resume" = "Could not resume the recording";
 "Could not start record" = "Could not start recording";
 "Mail Subject" = "I sent you a voice message";
-"Mail Body Format" = "Here's my message.<br/>%@<br/><br/><a href=\"%@\">Touch to reply via Peppermint</a><br/><br/>";
+"Mail Body Format" = "Here's my message.<br/>%@<br/><br/><a href=\"%@\" >Touch to reply via Peppermint</a><br/><br/>";
+"Mail Text Format" = "Here's my message (%@). Touch %@ for a fastReply";
 "Please add an email account" = "Please add and configure at least one mail account on this device to be able to send voice messages over email";
 "Time is up" = "Time is up!\nYou may tap send to send current recorded message or tap cancel to dismiss the recorded message";
 "Message sent with success" = "Your message has been sent successfully";
