--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -56,7 +56,7 @@
 "Log In with Facebook" = "Log In With Facebook";
 "Log In with Google" = "Log In With Google";
 "Log In with Email" = "Log In With Email";
-"Please Login" = "To send your first message please select how to log in:";
+"Please Login" = "Please select how to log in:";
 "Done" = "Done";
 "Contacts" = "Contacts";
 "Settings" = "Settings";
