--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -82,7 +82,7 @@
 "Password" = "Password";
 "Verification Mail Sent" = "Peppermint just sent you a verification email. Please check your email inbox!";
 "This field is mandatory" = "This field is mandatory";
-"Mail Format is not correct" = "Mail Format is not correct";
+"Mail Format is not correct" = "Please enter a valid email address.";
 "Facebook" = "Facebook";
 "Google" = "Google";
 "Logged in message format" = "You are currently logged in\nusing %@";
@@ -94,3 +94,5 @@
 "Save" = "Save";
 "Subject" = "Subject";
 "Subject Description" = "The email subject";
+
+"What is your name?" = "What's your name?";
