- Localisation File Updated

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -9,46 +9,42 @@
 "via" = "via";
 "Search for Contacts" = "Search for Contacts";
 "No contacts have been found" = "No contacts\nhave been found";
-"No contacts explanation" = "Add some friends to your contactbook first\nand then come back to Peppermint";
+"No contacts explanation" = "Add some friends to your contactbook first and then come back to Peppermint";
 "Peppermint" = "Peppermint";
 "Ok" = "Ok";
 "An error occured" = "An error occured";
-"Contacts access rights explanation" = "To be able to use Peppermint you should give access to your contacts. You can change the access rights from the settings.";
+"Contacts access rights explanation" = "To use Peppermint you need to give access to your contacts. You can change the access rights from the phone settings.";
 "Information" = "Information";
-"Recording is not acitve" = "Recording is not acitve";
-"Recording is already acitve" = "Recording is already acitve";
+"Recording is not active" = "Recording is not active";
+"Recording is already active" = "Recording is already active";
 "Record Message" = "Record Message";
 "for ContactNameSurname" = "for %@";
-"SMS is not implemented" = "SMS functionality is not implemented";
 "Information" = "Information";
 "Could not resume" = "Could not resume the recording";
 "Could not start record" = "Could not start recording";
 "Mail Subject" = "I sent you a voice message";
-"Mail Body Format" = "Here's my message.<br/>%@<br/><br/><a href=\"%@\" >Touch to reply via Peppermint</a><br/><br/>";
-"Mail Text Format" = "Here's my message (%@). Touch %@ for a fastReply \n%@";
-"Please add an email account" = "Please add and configure at least one mail account on this device to be able to send voice messages over email";
-"Time is up" = "Time is up!\nYou may tap send to send current recorded message or tap cancel to dismiss the recorded message";
+"Mail Body Format" = "Here's my message.<br/>%@<br/><br/><a href=\"%@\" >Touch to reply via Peppermint</a><br/><br/>%@<br/>";
+"Mail Text Format" = "Here's my message (%@). Touch %@ for a fast reply\n%@";
+"Time is up" = "Time is up! You may tap to send the recorded message or tap cancel";
 "Message sent with success" = "Your message has been sent successfully";
 "All Contacts" = "All Contacts";
 "Recent Contacts" = "Recent Contacts";
 "Email Contacts" = "Email Contacts";
 "Phone Contacts" = "Phone Contacts";
 "Enter a filter text" = "Your selection can only work with a filter text. Please type a filter text";
-"Mic Access rights explanation" = "To be able to use Peppermint you should give access to your microphone. You can change the access rights from the settings.";
-"Settings URL is not supported" = "Your iOS version does not support redirecting to Settings Page. Please follow the Home Screen -> Settings -> Peppermint path to change permissions";
+"Mic Access rights explanation" = "To be able to use Peppermint you should give access to your microphone. You can change the access rights from your phone settings.";
+"Settings URL is not supported" = "Your iOS version does not support redirecting to the Settings Page. Please go to the Home Screen -> Settings -> Peppermint to change permissions";
 "Settings" = "Settings";
 "Recording is cut" = "Your voice recording is cut. How would you like to proceed?";
-"Restart record" = "Restart recording";
-"Continue from previous" = "Continue from previous";
+"Restart record" = "Re-start recording";
 "Recording for contact format" = "Recording for %@\n%@";
 "Hold to record message" = "Hold to record, release to send";
 "Account details message" = "Please enter your account details.\n**********\nTEST NOTE:This popup is shown for user to login. Design will be changed\n**********";
 "Cancel" = "Cancel";
 "Email" = "Email";
-"Name surname" = "Name surname";
 "Record More Than Limit Format" = "Please record at least %d seconds before\nsending";
 "Send" = "Send";
-"Re record" = "Re record";
+"Re record" = "Re-record";
 "Swipe in any direction to cancel" = "Swipe in any direction\nto cancel";
 "Tap to cancel" = "Tap to cancel";
 "Service is not available" = "Your device does not support this message service";
@@ -94,5 +90,4 @@
 "Save" = "Save";
 "Subject" = "Subject";
 "Subject Description" = "The email subject";
-
 "What is your name?" = "What's your name?";
