- Added continue button to the tutorial page - All operational errors are tidied in AppDelegate handleError - Message sending is now continuing in background - Fix on explode animation and timing

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -91,3 +91,7 @@
 "Subject" = "Subject";
 "Subject Description" = "The email subject";
 "What is your name?" = "What's your name?";
+"Please enter at least 6 characters" = "Please enter at least 6 characters";
+"Please connect to the Internet then Log In" = "Please connect to the Internet then Log In";
+"Continue" = "Continue";
+"Please check your internet connection and try again" = "Please check your internet connection and try again";
