--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -9,7 +9,7 @@
 "via" = "via";
 "Search for Contacts" = "Search for Contacts";
 "No contacts have been found" = "No contacts\nhave been found";
-"No contacts explanation" = "Add some friends to your contactbook first and then come back to Peppermint";
+"No contacts explanation" = "Enter an email address to send your first message";
 "Peppermint" = "Peppermint";
 "Ok" = "Ok";
 "An error occured" = "An error occured";
@@ -95,3 +95,6 @@
 "Please connect to the Internet then Log In" = "Please connect to the Internet then Log In";
 "Continue" = "Continue";
 "Please check your internet connection and try again" = "Please check your internet connection and try again";
+"Connection error" = "Connection error";
+"Please connect to the internet to upload the message" = "Please connect to the internet to upload the message";
+"Please check your login information" = "Please check your login information";
