--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -97,3 +97,4 @@
 "Connection error" = "Connection error";
 "Please connect to the internet to upload the message" = "Please connect to the internet to upload the message";
 "Please check your login information" = "Please check your login information";
+"EMAIL_HEADER_TITLE" = "Don't have Google or Facebook?\nLog in with email and password";
