--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -96,3 +96,4 @@
 "Connection error" = "Connection error";
 "Please connect to the internet to upload the message" = "Please connect to the internet to upload the message";
 "Please check your login information" = "Please check your login information";
+"No Internet connection: Your message will be sent later" = "No Internet connection: Your message will be sent later";
