- Fixed -  Register process errors based on wrong Base64 encoding - Fixed - Cache messages when app is terminating - Fixed - Search text is deleted when the app is going in background - Removed busy wait for background operations - Implemented a new way of Base64 encoding (The api was giving error with current base64 encoding) -

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -23,7 +23,7 @@
 "Could not resume" = "Could not resume the recording";
 "Could not start record" = "Could not start recording";
 "Mail Subject" = "I sent you a voice message";
-"Mail Body Format" = "Here's my message.<br/>%@<br/><br/><a href=\"%@\" >Touch to reply via Peppermint</a><br/><br/>%@<br/>";
+"Mail Body Format" = "Here's my message.<br/>%@<br/><br/><a href=\"%@\" >Peppermint Quick Reply</a><br/><br/>%@<br/>";
 "Mail Text Format" = "Here's my message (%@). Touch %@ for a fast reply\n%@";
 "Time is up" = "Time is up! You may tap to send the recorded message or tap cancel";
 "Message sent with success" = "Your message has been sent successfully";
