- Check if email is free method

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -98,3 +98,4 @@
 "Please check your login information" = "Please check your login information";
 "EMAIL_HEADER_TITLE" = "Don't have Google or Facebook?\nLog in with email and password";
 "No Internet connection: Your message will be sent later" = "No Internet connection: Your message will be sent later";
+"Invalid email" = "Invalid email";
