- Added show all contacts button in contacts view - Fixed "Application can not be installed at this time" problem

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -97,3 +97,4 @@
 "Please connect to the internet to upload the message" = "Please connect to the internet to upload the message";
 "Please check your login information" = "Please check your login information";
 "No Internet connection: Your message will be sent later" = "No Internet connection: Your message will be sent later";
+"Show All Contacts" = "Show All Contacts";
