--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -23,7 +23,8 @@
 "Could not resume" = "Could not resume the recording";
 "Could not start record" = "Could not start recording";
 "Mail Subject" = "I sent you a voice message";
-"Mail Body Format" = "Here's my message.<br/>%@<br/><br/><a href=\"%@\" >Peppermint Quick Reply</a><br/><br/>%@<br/>";
+"Mail Body Format old" = "Here's my message.<br/>%@<br/><br/><a href=\"%@\" >Peppermint Quick Reply</a><br/><br/>%@<br/>";
+"Mail Body Format" = "<p><p style=\"font-family: Arial, Verdana, Sans-serif; font-size: 14px;\">Here's my message. Click to play</p><audio controls=\"controls\"> <source src=\"%@\" type=\"%@\"/> <a href=\"%@\" type=\"%@\" style=\"display: block;\"> <img src=\"http://peppermint.com/img/preview.png\" alt=\"Play Audio Message\"/> </a> </audio></p><br/><a href=\"%@\" style=\"display: inline-block; padding: 15px 20px 15px 70px; border-radius: 4px; color: white; text-decoration: none; font-family: Arial, Verdana, Sans-serif; font-weight: 500; font-size: 14px; background-repeat: no-repeat; background-color: #2fbbaa; background-position: 20px center; background-image: url('http://peppermint.com/img/reply_icon.png'); background-image: url('http://peppermint.com/img/reply_icon.png'), -moz-linear-gradient(top, #2fbbaa 0%%, #57be92 100%%); background-image: url('http://peppermint.com/img/reply_icon.png'), -webkit-linear-gradient(top, #2fbbaa 0%%,#57be92 100%%); background-image: url('http://peppermint.com/img/reply_icon.png'), linear-gradient(to bottom, #2fbbaa 0%%,#57be92 100%%);\">Peppermint Quick Reply</a><br/>%@";
 "Mail Text Format" = "Here's my message (%@). Touch %@ for a fast reply\n%@";
 "Time is up" = "Time is up! You may tap to send the recorded message or tap cancel";
 "Message sent with success" = "Your message has been sent successfully";
