- Fixed size&text of "Show All Contacts" button

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -102,3 +102,4 @@
 "Invalid email" = "Invalid email";
 "No Internet connection: Your message will be sent later" = "No Internet connection: Your message will be sent later";
 "Add Contact" = "Add Contact";
+"Show All Contacts" = "Show All Contacts";
