--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -102,4 +102,5 @@
 "Invalid email" = "Invalid email";
 "No Internet connection: Your message will be sent later" = "No Internet connection: Your message will be sent later";
 "Add Contact" = "Add Contact";
-"Show All Contacts" = "Show All Contacts";
+"View All Contacts" = "View All Contacts";
+"You can add a phone contact, an email contact or both" = "You can add a phone contact, an email contact or both";
