- Asana Tasks (Bug fix)

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -114,3 +114,4 @@
 "Email recover message format" = "We sent an email to %@ to reset your password";
 "Search here for your friend" = "Search here for your friend.";
 "Then tap and hold to send them an audio message." = "Then tap and hold\nto send them an audio message.";
+"Display Name can not be empty" = "Display Name can not be empty";
