-Updated notification text

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -119,3 +119,4 @@
 "Contact Support account error" = "Please add and configure at least one mail account on this device to be able to contact support";
 "Contact Support Subject" = "Contact Support";
 "Contact support mail was sent" = "Contact support mail was sent";
+"You have installed Peppermint. Click to send your first message!" = "You have installed Peppermint. Click to send your first message!";
