- Added About Page

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -120,3 +120,7 @@
 "Contact Support Subject" = "Contact Support";
 "Contact support mail was sent" = "Contact support mail was sent";
 "You have installed Peppermint. Click to send your first message!" = "You have installed Peppermint. Click to send your first message!";
+"About" = "About";
+"Privacy Policy & Terms of Use" = "Privacy Policy\n& Terms of Use";
+"Peppermint.com" = "Peppermint.com";
+"Version" = "Version";
