- Added database versioning for future releases - Added basic ChantsViewController

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -124,3 +124,4 @@
 "Privacy Policy & Terms of Use" = "Privacy Policy\n& Terms of Use";
 "Peppermint.com" = "Peppermint.com";
 "Version" = "Version";
+"Chats" = "Chats";
