--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -54,7 +54,8 @@
 "Log In with Facebook" = "Log In With Facebook";
 "Log In with Google" = "Log In With Google";
 "Log In with Email" = "Log In With Email";
-"Please Login" = "Please select how to log in:";
+"To send a message with Peppermint" = "To send a message with Peppermint,\nyou need to create an account.";
+"Please Login" = " Please select how to login:";
 "Done" = "Done";
 "Contacts" = "Contacts";
 "Settings" = "Settings";
@@ -132,3 +133,4 @@
 "Secont" = "Second";
 "Plural Suffix" = "s";
 "Just Now" = "Just Now";
+"Don't want to create an account yet? click here" = "Don't want to create\nan account yet? click here";
