- Updated Chats title

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -123,7 +123,7 @@
 "Privacy Policy & Terms of Use" = "Privacy Policy\n& Terms of Use";
 "Peppermint.com" = "Peppermint.com";
 "Version" = "Version";
-"Chats" = "Chats";
+"Chats" = "Messages";
 "Record a Message" = "Record a Message";
 "Year" = "Year";
 "Month" = "Month";
