- Updated contacts view page to support the case when user do not give permission

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -139,3 +139,4 @@
 "Please enter a valid phone number." = "Please enter a valid phone number.";
 "You haven't sent any messages yet!" = "You haven't sent any messages yet!";
 "Go back and send a message" = "Go back and send a message";
+"Show results from iPhone contacts" = "Show results from iPhone contacts";
