- Addded sound when message received - Code cleaning

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -148,3 +148,4 @@
 "No" = "No";
 "Add email address" = "Add email address";
 "Reply" = "Reply";
+"Please try again later" = "Please try again later";
