- Inter app messaging bug fixes

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -149,3 +149,4 @@
 "Add email address" = "Add email address";
 "Reply" = "Reply";
 "Please try again later" = "Please try again later";
+"Mandrill message can not be delivered" = "Peppermint could not deliver verification email. Please check your inbox settings";
