- Added fix for "User can not login via Facebook" with adding manuel connectivity check

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -151,3 +151,4 @@
 "Please try again later" = "Please try again later";
 "Mandrill message can not be delivered" = "Peppermint could not deliver verification email. Please check your inbox settings";
 "Enable" = "Enable";
+"You should have internet connection to login" = "You should have internet connection to login";
