- Bugfix on proximity sensor operations

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -7,7 +7,7 @@
 */
 
 "via" = "via";
-"Search for Contacts" = "Search for Contacts";
+"Search for Contacts" = "Search All Contacts";
 "No contacts have been found" = "No contacts have been found.";
 "No contacts explanation" = "Enter an email address to send your first message";
 "Peppermint" = "Peppermint";
