- Updated time view to show "Today", "Yesterday" & date

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -152,3 +152,5 @@
 "Mandrill message can not be delivered" = "Peppermint could not deliver verification email. Please check your inbox settings";
 "Enable" = "Enable";
 "You should have internet connection to login" = "You should have internet connection to login";
+"Today" = "Today";
+"Yesterday" = "Yesterday";
