--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -124,7 +124,7 @@
 "Peppermint.com" = "Peppermint.com";
 "Version" = "Version";
 "Chats" = "Messages";
-"Record a Message" = "Record a Message";
+"Record a Message" = "Press and Hold to Record";
 "Year" = "Year";
 "Month" = "Month";
 "Day" = "Day";
