- Updated Feedback Subject

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -64,7 +64,7 @@
 "support@peppermint.com" = "support@peppermint.com";
 "Feedback account error" = "Please add and configure at least one mail account on this device to be able to send feedbacks";
 "Feedback sent with success" = "Your message was sent";
-"Feedback Subject" = "Peppermint Feedback";
+"Feedback Subject" = "Peppermint feedback iPhone";
 "Starting" = "Preparing";
 "Uploading" = "Uploading";
 "Sending" = "Sending";
@@ -157,4 +157,3 @@
 "Or email us for support" = "or email us for support";
 "Peppermint Support" = "Peppermint Support";
 "Peppermint Support Explanation" = "Send us audio feedback on the app";
-
