- Updated behaviour when there is no recent contacts

--- a/Peppermint/Text.strings
+++ b/Peppermint/Text.strings
@@ -157,3 +157,4 @@
 "Or email us for support" = "or email us for support";
 "Peppermint Support" = "Peppermint Support";
 "Peppermint Support Explanation" = "Send us audio feedback on the app";
+"There are no recent contacts" = "There are no recent contacts";
